Home page modified

--- a/StudentSupport/templates/home_auth/index.html
+++ b/StudentSupport/templates/home_auth/index.html
@@ -397,7 +397,10 @@
                         </div>
                         <div class="media-body p-2 mt-3">
                             <h3 class="heading">Certified Teachers</h3>
-                            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                            <blockquote class="blockquote text-right">
+                                <p class="mb-0"><q>The mediocre teacher tells. The good teacher explains. The superior teacher demonstrates. The great teacher inspires.</q></p>
+                                <footer class="blockquote-footer">William A. Ward</footer>
+                            </blockquote>
                         </div>
                     </div>
                 </div>
@@ -408,7 +411,10 @@
                         </div>
                         <div class="media-body p-2 mt-3">
                             <h3 class="heading">Special Education</h3>
-                            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                            <blockquote class="blockquote text-right">
+                                <p class="mb-0"><q>It is a thousand times better to have common sense without education than to have education without common sense.</q></p>
+                                <footer class="blockquote-footer">Robert G. Ingersoll</footer>
+                            </blockquote>
                         </div>
                     </div>
                 </div>
@@ -419,7 +425,10 @@
                         </div>
                         <div class="media-body p-2 mt-3">
                             <h3 class="heading">Book &amp; Library</h3>
-                            <p>Even the all-powerful Pointing has no control about the blind texts it is an almost unorthographic.</p>
+                            <blockquote class="blockquote text-right">
+                                <p class="mb-0"><q>Reading gives us someplace to go when we have to stay where we are. </q></p>
+                                <footer class="blockquote-footer">Mason Cooley</footer>
+                            </blockquote>
                         </div>
                     </div>
                 </div>
@@ -432,14 +441,13 @@
             <div class="row">
                 <div class="col-md-12 wrap-about py-5 pr-md-4 ftco-animate">
                     <h2 class="mb-4">What We Offer</h2>
-                    <p>On her way she met a copy. The copy warned the Little Blind Text, that where it came from it would have been rewritten a thousand times and everything that was left from its origin would be the word.</p>
                     <div class="row mt-5">
                         <div class="col-lg-6">
                             <div class="services-2 d-flex">
                                 <div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-security"></span></div>
                                 <div class="text">
+                                    <br/>
                                     <h3>Digital Platform For Feedback</h3>
-                                    <p>Far far away, behind the word mountains, far from the countries Vokalia.</p>
                                 </div>
                             </div>
                         </div>
@@ -447,8 +455,8 @@
                             <div class="services-2 d-flex">
                                 <div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-reading"></span></div>
                                 <div class="text">
+                                    <br />
                                     <h3>A Complaint Section</h3>
-                                    <p>Far far away, behind the word mountains, far from the countries Vokalia.</p>
                                 </div>
                             </div>
                         </div>
@@ -456,8 +464,8 @@
                             <div class="services-2 d-flex">
                                 <div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-reading"></span></div>
                                 <div class="text">
+                                    <br />
                                     <h3>A Committee Section</h3>
-                                    <p>Far far away, behind the word mountains, far from the countries Vokalia.</p>
                                 </div>
                             </div>
                         </div>
@@ -465,8 +473,8 @@
                             <div class="services-2 d-flex">
                                 <div class="icon mt-2 mr-3 d-flex justify-content-center align-items-center"><span class="flaticon-education"></span></div>
                                 <div class="text">
+                                    <br />
                                     <h3>Interactive Environment</h3>
-                                    <p>Far far away, behind the word mountains, far from the countries Vokalia.</p>
                                 </div>
                             </div>
                         </div>
@@ -493,7 +501,6 @@
             <div class="row justify-content-center mb-5 pb-2">
                 <div class="col-md-8 text-center heading-section ftco-animate">
                     <h2 class="mb-4"><span>GEC Bhavnagar</span> Departments</h2>
-                    <p>Separated they live in. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
                 </div>
             </div>
             <div class="row">
@@ -504,9 +511,6 @@
                         </div>
                         <div class="text pt-3 text-center">
                             <h3>Computer Engineering</h3>
-                            <div class="faded">
-                                <p>Computer engineering (CE) is a branch of engineering that integrates several fields of computer science and electronic engineering required to develop computer hardware and software.</p>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -517,9 +521,6 @@
                         </div>
                         <div class="text pt-3 text-center">
                             <h3>Information & Technology</h3>
-                            <div class="faded">
-                                <p>IT or information technology refers to the development, maintenance, and use of computer software, systems, and networks. It includes their use for the processing and distribution of data.</p>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -530,9 +531,6 @@
                         </div>
                         <div class="text pt-3 text-center">
                             <h3>Civil Engineering</h3>
-                            <div class="faded">
-                                <p>Civil engineering is the broadest of the engineering fields.</p>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -543,9 +541,6 @@
                         </div>
                         <div class="text pt-3 text-center">
                             <h3>Electronics And Communication</h3>
-                            <div class="faded">
-                                <p>EC Engineering is a combination of classic Electronics Engineering and Communication Engineering. This course focuses on electronics equipment, circuits and networks and their use in transmission of information.</p>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -556,9 +551,6 @@
                         </div>
                         <div class="text pt-3 text-center">
                             <h3>Production Engineering</h3>
-                            <div class="faded">
-                                <p>Production engineering is a combination of manufacturing technology, engineering sciences with management science.</p>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -569,9 +561,6 @@
                         </div>
                         <div class="text pt-3 text-center">
                             <h3>Mechanical Engineering</h3>
-                            <div class="faded">
-                                <p>Mechanical engineering is an engineering discipline that combines engineering physics and mathematics principles with materials science to design, analyze, manufacture, and maintain mechanical systems.</p>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -583,9 +572,6 @@
                         </div>
                         <div class="text pt-3 text-center">
                             <h3>General Department</h3>
-                            <div class="faded">
-                                <p></p>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -596,9 +582,6 @@
                         </div>
                         <div class="text pt-3 text-center">
                             <h3>Applied Mechanics</h3>
-                            <div class="faded">
-                                <p></p>
-                            </div>
                         </div>
                     </div>
                 </div>
@@ -611,7 +594,6 @@
             <div class="row justify-content-center mb-5 pb-2">
                 <div class="col-md-8 text-center heading-section ftco-animate">
                     <h2 class="mb-4"><span>Our</span> Committees</h2>
-                    <p>Separated they live in. A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country</p>
                 </div>
             </div>
             <div class="row">
@@ -630,7 +612,7 @@
                 <div class="col-md-6 course d-lg-flex ftco-animate">
                     <div class="img" style="background-image: url({% static 'assets/landing/images/grievance.png' %});"></div>
                     <div class="text bg-light p-4">
-                        <h3>Greviance Cell Committee</h3>
+                        <h3>Grievance Re-Addressal Committee</h3>
                     </div>
                 </div>
             </div>
