--- a/StudentSupport/templates/students/dashboard_student.html
+++ b/StudentSupport/templates/students/dashboard_student.html
@@ -127,12 +127,12 @@
                                     </a>
                                     <ul class="pcoded-submenu">
                                         <li class="">
-                                            <a href="{% url 'student_mid_sem_feedback'  %}">
+                                            <a href="{% url 'student_feedback_section' type='mid-sem'  %}">
                                                 <span class="pcoded-mtext">Mid Semester Feedback</span>
                                             </a>
                                         </li>
                                         <li class="">
-                                            <a href="{% url 'student_end_sem_feedback'  %}">
+                                            <a href="{% url 'student_feedback_section' type='end-sem'  %}">
                                                 <span class="pcoded-mtext">End Semester Feedback</span>
                                             </a>
                                         </li>
