--- a/StudentSupport/templates/todo.html
+++ b/StudentSupport/templates/todo.html
@@ -8,10 +8,26 @@
     // TODO : Subjects wise
     // TODO : Semester wise
     // TODO : Department wise
+    // TODO : Add loader wherever can be possible.
 
     // TODO : Django Admin Customization.
 
     // TODO : Change Bootstrap css and js in all files
-    // TODO : Remove all unnecessary css and js fromo bower components and assets as well.
+    // TODO : Remove all unnecessary css and js from bower components and assets as well.
+
+    /* TODO : Email encoding in change password.
+       TODO : General Department and Applied mechanics.
+       TODO : Ask karshan sir for 2 divisions of mechanical department.
+       TODO : General department can download report department wise
+     */
 
 </script>
+<!-- TODO : Change every back to dashboard from this. -->
+<div class="col-sm-4 col-md-4 col-lg-4">
+    <span class="f-right">
+        <a href="{% url 'student_dashboard' %}" class="btn" style="font-size: 15px">
+            <i class="feather icon-arrow-left"></i>
+            Back to Dashboard
+        </a>
+    </span>
+</div>
