--- a/StudentSupport/static/assets/star_ratings/stars.css
+++ b/StudentSupport/static/assets/star_ratings/stars.css
@@ -22,14 +22,14 @@ input.star:checked ~ label.star:before {
 
 input.star-1:checked ~ label.star:before { color: #fc2912; }
 
-input.star-2:checked ~ label.star:before { color: #fc6c12; }
+input.star-2:checked ~ label.star:before { color: #ff8c00; }
 
 input.star-3:checked ~ label.star:before { color: #fcaa12; }
 
 input.star-4:checked ~ label.star:before { color: #fcd112; }
 
 input.star-5:checked ~ label.star:before {
-  color: #fcfc12;
+  color: #ffff00;
   text-shadow: 0 0 20px #952;
 }
 
