--- a/StudentSupport/templates/home_auth/index.html
+++ b/StudentSupport/templates/home_auth/index.html
@@ -27,7 +27,8 @@
     <link rel="stylesheet" href="{% static 'assets/landing/css/magnific-popup.css' %}">
 
     <link rel="stylesheet" href="{% static 'assets/landing/css/aos.css' %}">
-      <!-- sweet alert framework -->
+
+    <!-- sweet alert framework -->
     <link rel="stylesheet" type="text/css" href="{% static 'bower_components/sweetalert/css/sweetalert.css' %}">
 
     <link rel="stylesheet" href="{% static 'assets/landing/css/ionicons.min.css' %}">
@@ -425,7 +426,7 @@
                         </div>
                         <div class="media-body p-2 mt-3">
                             <h3 class="heading">Book &amp; Library</h3>
-                            <blockquote class="blockquote text-right">
+                            <blockquote class="blockquote text-right" style="color:#fffabb">
                                 <p class="m-b-0"><q>Reading gives us someplace to go when we have to stay where we are. </q></p>
                                 <footer class="blockquote-footer">Mason Cooley</footer>
                             </blockquote>
