--- a/StudentSupport/templates/hod/hod_view_average_feedback.html
+++ b/StudentSupport/templates/hod/hod_view_average_feedback.html
@@ -23,6 +23,9 @@
     <!-- feather Awesome -->
     <link rel="stylesheet" type="text/css" href="{% static 'assets/icon/feather/css/feather.css' %}">
 
+    <!-- sweet alert framework -->
+    <link rel="stylesheet" type="text/css" href="{% static 'bower_components/sweetalert/css/sweetalert.css' %}">
+
     <!-- Style.css -->
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/style.css' %}">
     <link rel="stylesheet" type="text/css" href="{% static 'assets/css/jquery.mCustomScrollbar.css' %}">
@@ -74,16 +77,10 @@
             <nav class="navbar header-navbar pcoded-header">
                 <div class="navbar-wrapper">
                     <div class="navbar-logo">
-                    <a class="mobile-menu" id="mobile-collapse" href="#!">
-                        <i class="feather icon-menu"></i>
-                    </a>
-                    <a href="index-1.htm">
-                        <img class="img-fluid" src="{% static 'assets/images/logo.png' %}" alt="Theme-Logo">
-                    </a>
-                    <a class="mobile-options">
-                        <i class="feather icon-more-horizontal"></i>
-                    </a>
-                </div>
+                        <a href="index-1.htm">
+                            <img class="img-fluid" src="{% static 'assets/images/logo.png' %}" alt="Theme-Logo">
+                        </a>
+                    </div>
                     <div class="navbar-container container-fluid">
 
                     <ul class="nav-right">
@@ -91,8 +88,7 @@
                         <li class="user-profile header-notification">
                             <div class="dropdown-primary dropdown">
                                 <div class="dropdown-toggle" data-toggle="dropdown">
-                                    <img src="{% static 'assets/images/avatar-4.jpg' %}" class="img-radius" alt="User-Profile-Image">
-                                    <span>Jasmin Makwana</span>
+                                    <span>{{ name }}</span>
                                     <i class="feather icon-chevron-down"></i>
                                 </div>
                                 <ul class="show-notification profile-notification dropdown-menu" data-dropdown-in="fadeIn" data-dropdown-out="fadeOut">
@@ -120,10 +116,17 @@
                         <div class="page-wrapper">
                              <div class="page-header">
                                 <div class="row align-items-end">
-                                    <div class="col-lg-12">
+                                    <div class="col-sm-12 col-md-12 col-lg-6">
                                         <div class="page-header-title">
                                             <div class="d-inline">
                                                 <h3>Computer Engineering Department</h3>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-12 col-md-12 col-lg-6">
+                                        <div class="page-header-title">
+                                            <div class="d-inline">
+                                                <h3>Mid Semester Feedback</h3>
                                             </div>
                                         </div>
                                     </div>
@@ -132,7 +135,7 @@
                                     </div>
                                     <div class="col-sm-4 col-md-4 col-lg-4">
                                         <span class="f-right">
-                                            <a href="#" class="btn" style="font-size: 15px">
+                                            <a href="{% url 'hod_dashboard' %}" class="btn" style="font-size: 15px">
                                                 <i class="feather icon-arrow-left"></i>
                                                 Back to Dashboard
                                             </a>
@@ -141,7 +144,7 @@
                                 </div>
                             </div>
                             <div class="page-body">
-                               <div class="row">
+                                <div class="row">
                                    <div class="col-sm-9 col-md-9 col-lg-9 col-xl-9">
                                        <div class="card">
                                            <div class="card-header">
@@ -150,22 +153,39 @@
                                                    <div class="form-group row">
                                                        <label for="faculty" class="col-md-2 col-lg-2 col-form-label">Select Faculty :</label>
                                                        <div class="col-md-8 col-lg-8">
-                                                           <select class="form-control" name="faculty" id="faculty">
+                                                           <select class="form-control" name="view_feedback_faculty" id="view_feedback_faculty">
+                                                               <option value="-1" selected disabled>Select Faculty to view feedback</option>
+                                                           {% for f in dept_faculties %}
+                                                               <option value="{{ f.id }}">{{ f.name }}</option>
+                                                           {% endfor %}
                                                            </select>
                                                        </div>
                                                        <div class="col-md-2 col-lg-2">
-                                                           <button type="button" class="btn btn-outline-info">View</button>
+                                                           <button type="button" class="btn btn-outline-primary" onclick="load_graph()">View</button>
                                                        </div>
                                                    </div>
                                                </form>
                                                <div class="col-sm-12">
-                                                   <button class="btn btn-round btn-sm">
+                                                   <button class="btn btn-sm btn-round btn-outline-info">
                                                        End Semester <i class="feather icon-x"></i>
                                                    </button>
                                                    Filter Tabs goes here.
                                                </div>
                                            </div>
                                            <div class="card-block">
+                                               <div class="loader-block" style="display: none">
+                                                   <svg id="loader2" viewBox="0 0 100 100">
+                                                       <circle id="circle-loader2" cx="50" cy="50" r="45"></circle>
+                                                    </svg>
+                                               </div>
+                                               <div class="row">
+                                                   <div class="col-sm-6">
+                                                       Updated On: <b><span id="feedback-date"></span></b>
+                                                   </div>
+                                                   <div class="col-sm-6">
+                                                       You can see all the question <a href="#questions_list" style="color: dodgerblue; font-size: inherit">here.</a>
+                                                   </div>
+                                               </div>
                                                <canvas id="myChart"></canvas>
                                            </div>
                                        </div>
@@ -176,10 +196,33 @@
                                                <h4 style="font-size: 20px">Filters</h4>
                                            </div>
                                            <div class="card-block">
+                                               <div class="d-inline">
+                                                   <h5 class="p-b-10">Term</h5>
+                                                   <ul class="d-inline-block">
+                                                       <li>Odd</li>
+                                                       <li>Even</li>
+                                                   </ul>
+                                               </div>
                                            </div>
                                        </div>
                                    </div>
                                </div>
+                                <div class="row">
+                                    <div class="col-sm-9 col-md-9 col-lg-9 col-xl-9">
+                                        <div class="card" id="questions_list">
+                                            <div class="card-header">
+                                                <h4 style="font-size: 20px">Questions List</h4>
+                                            </div>
+                                            <div class="card-block">
+                                                <ul>
+                                                    {% for q in questions %}
+                                                        <li><b>Question : {{ forloop.counter }}</b> - {{ q.question_text }}</li>
+                                                    {% endfor %}
+                                                </ul>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -198,6 +241,9 @@
     <!-- modernizr js -->
     <script type="text/javascript" src="{% static 'bower_components/modernizr/js/modernizr.js' %}"></script>
     <script type="text/javascript" src="{% static 'bower_components/modernizr/js/css-scrollbars.js' %}"></script>
+
+    <!-- sweet alert js -->
+    <script type="text/javascript" src="{% static 'bower_components/sweetalert/js/sweetalert.min.js' %}"></script>
 
     <!-- Chart js -->
     <script type="text/javascript" src="{% static 'assets/extra-js/Chart/Chart.js_2.9.3.js' %}"></script>
@@ -220,10 +266,16 @@
             purple: 'rgb(153, 102, 255)',
             grey: 'rgb(201, 203, 207)'
         };
+        var colorNames = Object.keys(window.chartColors);
+        question_label = [];
+        {% for q in questions %}
+            question_label.push('Question : ' + '{{ forloop.counter }}');
+        {% endfor %}
         var color = Chart.helpers.color;
 		var barChartData = {
-			labels: ['January', 'February', 'March', 'April', 'May', 'June', 'July'],
-			datasets: [{
+			labels: question_label,
+			datasets : []
+            /* datasets: [{
 				label: 'Dataset 1',
 				backgroundColor: color(window.chartColors.red).alpha(0.5).rgbString(),
 				borderColor: window.chartColors.red,
@@ -235,7 +287,7 @@
 				borderColor: window.chartColors.blue,
 				borderWidth: 1,
 				data: [10, 15, 20, 25, 35, 45, 50]
-			}]
+			}] */
 
 		};
         window.onload = function() {
@@ -248,7 +300,7 @@
 				        yAxes: [{
 				            ticks: {
 				                beginAtZero: true,
-                                max: 100
+                                max: 5.0
                             }
                         }]
                     },
@@ -262,8 +314,88 @@
 					}
 				}
 			});
-
 		};
+
+        function update_graph(rating_list, fac_name) {
+            var len = rating_list.length;
+            barChartData.datasets = [];
+            for(var i=0;i<len;i++) {
+                var colorName = colorNames[barChartData.datasets.length % colorNames.length];
+			    var dsColor = window.chartColors[colorName];
+			    var question_length = question_label.length;
+			    var data = [];
+			    for(var j=0;j<question_length; j++) {
+			        var ind = 'Q'+(j+1);
+			        data.push(rating_list[i][ind]);
+                }
+                var newdataset = {
+                    label: rating_list[i]['subject_name'],
+                    backgroundColor: color(dsColor).alpha(0.5).rgbString(),
+                    borderColor: dsColor,
+                    borderWidth: 1,
+                    data: data
+                }
+			    //adding new dataset of subject into barchart datasets.
+			    barChartData.datasets.push(newdataset);
+            }
+
+            //Updating barchart.
+            myBar.options.title.text = "Average Feedback for " + fac_name;
+            window.myBar.update();
+        }
+
+        function load_graph() {
+            $(document).find('div.loader-block').css('display', 'block');
+            var selected_faculty = $(document).find('select#view_feedback_faculty option:selected');
+            var fac_id = selected_faculty.val();
+            var fac_name = selected_faculty.text();
+            if(fac_id == "-1") {
+                $(document).find('div.loader-block').css('display', 'none');
+                alert("Select Faculty to view feedback.");
+                $(document).find('select#view_feedback_faculty').focus();
+            }
+            else {
+                $.ajax({
+                    type: "GET",
+                    url: "{{ base_url }}" + "get-average-feedback/",
+                    data: {
+                        type: 'mid',
+                        fac_id: fac_id
+                    },
+
+                    success: function (msg) {
+                        $(document).find('div.loader-block').css('display', 'none');
+                        var response = JSON.parse(msg);
+                        console.log(response);
+                        console.log(response['ratings'].length);
+                        if(response['ratings'].length == 0) {
+                            $(document).find('canvas#myChart').css('display', 'none');
+                            window.myBar.clear();
+                            swal({
+                                title: "Feedback Not available.",
+                                text: "May be the faculty you have chosen has not been assigned any subject to taught. Therefore no feedback can be shown.",
+                                type: "error",
+                            });
+                        }
+                        else {
+                            $(document).find('canvas#myChart').css('display', 'block');
+                            $(document).find('span#feedback-date').html(response['date']);
+                            update_graph(response['ratings'], fac_name);
+                        }
+
+                    },
+                    error: function (msg) {
+                        var response = JSON.parse(msg.responseText);
+                        swal({
+                            title: "Error!",
+                            text: response['error'],
+                            type: "error",
+                        });
+                        $(document).find('div.loader-block').css('display', 'none');
+                    },
+                });
+            }
+        }
     </script>
 </body>
 
